# mjo

./: CMakeLists.txt  man2html.sh  mjo_clang_format.sh  readme.md
docs/: mdirect.h.7.html  mfcntl.h.7.html  mjo_abort.3.html  mjo_arg_option.3.html  mjo_arg_parse.3.html  mjo_arg_value.3.html  mjo_istream_malloc.3.html  mjo_istream_push.3.html  mjo_istream_read.3.html  mjo_path_join.3.html  mjo_r7_hash.3.html  mjo_search_binary.3.html  mjo_u8_calc.3.html  mjo_u8_validate.3.html  mjo_utf8_compose.3.html  mjo_utf8_is_punctuation.3.html  mjo_utf8_is_quote.3.html  mjo_utf8_is_whitespace.3.html  mjo_vector_count.3.html  mjo_vector_malloc.3.html  mjo_vector_pop.3.html  mjo_vector_push.3.html  mstdio.h.7.html  mstdlib.h.7.html  mu8.h.7.html  mutf8.h.7.html
htmlman/: index.html  mjo_add_size_t.3.html  mjo_arg_malloc.3.html  mjo_arg_print.3.html  mjo_malloc.3.html  mjo_mul_size_t.3.html  mjo_path_full.3.html  mjo_read.3.html  mjo_u8_trim.3.html  mjo_vector_clear.3.html  mjo_vector_dequeue.3.html  mjo_vector_permute_push.3.html  mjo_vector_type.3.html  mjo_vector_variant_tag.3.html  mr7.h.7.html  mstddef.h.7.html  msysstat.h.7.html  munistd.h.7.html  mxywh.h.7.html
make/gnu/: INSTALL  Makefile.am  NEWS  README  configure  configure.ac
make/gnu/autom4te.cache/: output.1  traces.0  traces.1
mjo/: CMakeLists.txt  authors
mjo/examples/: CMakeLists.txt  abort.c  add.c  compose.c  mul.c  pathfull.c  pathjoin.c  trim.c  validate.c
mjo/include/: CMakeLists.txt  mdirect.h  mfcntl.h  mr7.h  mstddef.h  mstdio.h  mstdlib.h  mstring.h  msysstat.h  mu8.h  munistd.h  mutf8.h  mxywh.h
mjo/make/gnu/: COPYING  ChangeLog  INSTALL  Makefile.am  Makefile.in  configure.ac
mjo/make/gnu/autom4te.cache/: requests
mjo/make/wmake/: owbldlib.mif  owd16.mak  owd32.mak  owobj.mif
mjo/man3/: mjo_abort.3  mjo_add_size_t.3  mjo_malloc.3  mjo_mul_size_t.3  mjo_path_full.3  mjo_path_join.3  mjo_r7_hash.3  mjo_read.3  mjo_search_binary.3  mjo_u8_calc.3  mjo_u8_trim.3  mjo_u8_validate.3  mjo_utf8_compose.3  mjo_utf8_is_punctuation.3  mjo_utf8_is_quote.3  mjo_utf8_is_whitespace.3
mjo/man7/: mdirect.h.7  mfcntl.h.7  mr7.h.7  mstddef.h.7  mstdio.h.7  mstdlib.h.7  msysstat.h.7  mu8.h.7  munistd.h.7  mutf8.h.7  mxywh.h.7
mjo/src/: CMakeLists.txt  closedir.c  mabort.c  madd.c  mbsearch.c  mbsearcu.c  mcalc.c  mcalloc.c  mcompare.c  mcompose.c  mfree.c  mmalloc.c  mmul.c  mpathf.c  mpathj.c  mpunct.c  mquote.c  mr7hash.c  mr7lwr.c  mr7upr.c  mr7zero.c  mread.c  mreaddir.c  mrealloc.c  mshiftl.c  mshiftr.c  mspace.c  mstrchr.c  mstrdup.c  mtrim.c  mtriml.c  mtrimr.c  mvalid.c  opendir.c  readdir.c  sdbm_mix.h
mjo/util/: CMakeLists.txt  mjo_utf8_punct.cpp  mjo_utf8_quote.cpp  mjo_utf8_space.cpp  tabgen.c
mjoextra/: CMakeLists.txt
mjoextra/arg/include/: CMakeLists.txt  marg.h
mjoextra/arg/src/: CMakeLists.txt  _arg.h  _lookup.c  _missing.c  _optval.c  _parincl.c  _parlong.c  _parop.c  _parshrt.c  _push.c  _rd.c  free.c  new.c  option.c  parblock.c  parfile.c  parse.c  parvec.c  print.c  tointern.c  tostr.c  value.c  vecnew.c
mjoextra/arg/src/lexer/: CMakeLists.txt
mjoextra/arg/src/lexer/include/: mlexer.h
mjoextra/arg/src/lexer/src/: CMakeLists.txt  _lexer.h  _rdesc.c  _rdstm.c  lexfree.c  lexnew.c  lexpush.c  lexread.c
mjoextra/arg/src/ll/include/: mll.h
mjoextra/arg/src/ll/src/: CMakeLists.txt  acquiesc.c  rdarg.c  rdincl.c  rdlong.c  rdop.c  rdshort.c  scansep.c  scansp.c
mjoextra/include/: CMakeLists.txt  mread.h  mstr.h
mjoextra/istream/: CMakeLists.txt
mjoextra/istream/include/: CMakeLists.txt  mistream.h
mjoextra/istream/src/: CMakeLists.txt  _istream.h  sblknew.c  sfilenew.c  sfree.c  spush.c  sread.c
mjoextra/make/gnu/: AUTHORS  INSTALL  Makefile.am  Makefile.in  README  configure  configure.ac
mjoextra/make/gnu/autom4te.cache/: output.1  requests  traces.0  traces.1
mjoextra/make/wmake/: owbldlib.mif  owd16.mak  owd32.mak  owdir.mif  owobj.mif
mjoextra/man3/: mjo_arg_malloc.3  mjo_arg_option.3  mjo_arg_parse.3  mjo_arg_print.3  mjo_arg_value.3  mjo_istream_malloc.3  mjo_istream_push.3  mjo_istream_read.3  mjo_vector_clear.3  mjo_vector_count.3  mjo_vector_dequeue.3  mjo_vector_malloc.3  mjo_vector_permute_push.3  mjo_vector_pop.3  mjo_vector_push.3  mjo_vector_type.3  mjo_vector_variant_tag.3
mjoextra/src/: CMakeLists.txt  rdcsv.c  rdline.c  str.c
mjoextra/vector/include/: CMakeLists.txt  mvector.h
mjoextra/vector/src/: CMakeLists.txt  _vector.h  vclear.c  vcount.c  vdequeue.c  vfree.c  vgrow.c  vnew.c  vperpush.c  vpop.c  vpush.c  vshiftl.c  vshiftr.c  vtag.c  vtype.c  vvarfree.c
