# CC0 1.0 Universal --- Public Domain
#
# To the extent possible under law, Dante University Foundation and
# Contributors has waived all copyright and related or neighboring
# rights to this file (configure.ac). This work is published from:
# United States.
#
# Full text of this license can be found in '${MJO_HOME}/licenses/CC-CC0'
# or visit 'https://creativecommons.org/publicdomain/zero/1.0/legalcode.txt' or
# send a letter to Creative Commons, PO Box 1866, Mountain View, CA 94042, USA.
#
AC_INIT([mjoextra],[2021.12.12],[markjolesen@gmail.com])
AM_INIT_AUTOMAKE([no-define])

AC_PROG_CC
AC_PROG_CXX
AC_PROG_RANLIB

AC_CONFIG_FILES([Makefile])

AC_OUTPUT
